@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,15 +27,18 @@ package jdk.graal.compiler.graph;
 import static jdk.graal.compiler.graph.Graph.isNodeModificationCountsEnabled;
 import static jdk.graal.compiler.graph.Node.NOT_ITERABLE;
 
+import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.Map;
+import java.util.function.Function;
 
 import jdk.graal.compiler.core.common.Fields;
 import jdk.graal.compiler.core.common.FieldsScanner;
+import jdk.graal.compiler.debug.Assertions;
+import jdk.graal.compiler.debug.GraalError;
 import jdk.graal.compiler.graph.NodeClass.EdgeInfo;
-import jdk.graal.compiler.serviceprovider.GraalUnsafeAccess;
-
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 /**
  * Describes {@link Node} fields representing the set of inputs for the node or the set of the
@@ -43,7 +46,34 @@ import sun.misc.Unsafe;
  */
 public abstract class Edges extends Fields {
 
-    private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
+    private static final long MAX_EDGES = 8;
+    private static final long MAX_LIST_EDGES = 6;
+    static final long OFFSET_MASK = 0xFC;
+    static final long LIST_MASK = 0x01;
+    static final long NEXT_EDGE = 0x08;
+
+    private static final Unsafe UNSAFE = Unsafe.getUnsafe();
+
+    public static long computeIterationMask(Type type, int directCount, long[] offsets) {
+        long mask = 0;
+        if (offsets.length > MAX_EDGES) {
+            throw new GraalError("Exceeded maximum of %d edges (%s)", MAX_EDGES, type);
+        }
+        if (offsets.length - directCount > MAX_LIST_EDGES) {
+            throw new GraalError("Exceeded maximum of %d list edges (%s)", MAX_LIST_EDGES, type);
+        }
+
+        for (int i = offsets.length - 1; i >= 0; i--) {
+            long offset = offsets[i];
+            assert ((offset & OFFSET_MASK) == offset) : Assertions.errorMessageContext("field offset too large or has low bits set", offset);
+            mask <<= NEXT_EDGE;
+            mask |= offset;
+            if (i >= directCount) {
+                mask |= 0x3;
+            }
+        }
+        return mask;
+    }
 
     /**
      * Constants denoting whether a set of edges are inputs or successors.
@@ -55,11 +85,20 @@ public abstract class Edges extends Fields {
 
     private final int directCount;
     private final Type type;
+    private final long iterationMask;
 
     public Edges(Type type, int directCount, ArrayList<? extends FieldsScanner.FieldInfo> edges) {
         super(edges);
         this.type = type;
         this.directCount = directCount;
+        this.iterationMask = computeIterationMask(type, directCount, offsets);
+    }
+
+    @Override
+    public Map.Entry<long[], Long> recomputeOffsetsAndIterationMask(Function<Field, Long> getFieldOffset) {
+        Map.Entry<long[], Long> e = super.recomputeOffsetsAndIterationMask(getFieldOffset);
+        long[] newOffsets = e.getKey();
+        return Map.entry(newOffsets, computeIterationMask(type, directCount, newOffsets));
     }
 
     public static void translateInto(Edges edges, ArrayList<EdgeInfo> infos) {
@@ -68,13 +107,17 @@ public abstract class Edges extends Fields {
         }
     }
 
+    public long getIterationMask() {
+        return iterationMask;
+    }
+
     public static Node getNodeUnsafe(Node node, long offset) {
-        return (Node) UNSAFE.getObject(node, offset);
+        return (Node) UNSAFE.getReference(node, offset);
     }
 
     @SuppressWarnings("unchecked")
     public static NodeList<Node> getNodeListUnsafe(Node node, long offset) {
-        return (NodeList<Node>) UNSAFE.getObject(node, offset);
+        return (NodeList<Node>) UNSAFE.getReference(node, offset);
     }
 
     public void putNodeUnsafeChecked(Node node, long offset, Node value, int index) {
@@ -83,11 +126,11 @@ public abstract class Edges extends Fields {
     }
 
     public static void putNodeUnsafe(Node node, long offset, Node value) {
-        UNSAFE.putObject(node, offset, value);
+        UNSAFE.putReference(node, offset, value);
     }
 
     public static void putNodeListUnsafe(Node node, long offset, NodeList<?> value) {
-        UNSAFE.putObject(node, offset, value);
+        UNSAFE.putReference(node, offset, value);
     }
 
     /**
