@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,6 +28,9 @@ import static jdk.graal.compiler.core.common.Fields.translateInto;
 import static jdk.graal.compiler.debug.GraalError.shouldNotReachHere;
 import static jdk.graal.compiler.debug.GraalError.shouldNotReachHereUnexpectedValue;
 import static jdk.graal.compiler.graph.Edges.translateInto;
+import static jdk.graal.compiler.graph.Edges.NEXT_EDGE;
+import static jdk.graal.compiler.graph.Edges.LIST_MASK;
+import static jdk.graal.compiler.graph.Edges.OFFSET_MASK;
 import static jdk.graal.compiler.graph.Graph.isNodeModificationCountsEnabled;
 import static jdk.graal.compiler.graph.InputEdges.translateInto;
 import static jdk.graal.compiler.graph.Node.WithAllEdges;
@@ -70,8 +73,9 @@ import jdk.graal.compiler.nodeinfo.NodeCycles;
 import jdk.graal.compiler.nodeinfo.NodeInfo;
 import jdk.graal.compiler.nodeinfo.NodeSize;
 import jdk.graal.compiler.nodeinfo.Verbosity;
-import jdk.graal.compiler.serviceprovider.GraalUnsafeAccess;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
+import org.graalvm.nativeimage.Platform;
+import org.graalvm.nativeimage.Platforms;
 
 /**
  * Metadata for every {@link Node} type. The metadata includes:
@@ -83,7 +87,7 @@ import sun.misc.Unsafe;
  */
 public final class NodeClass<T> extends FieldIntrospection<T> {
 
-    private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
+    private static final Unsafe UNSAFE = Unsafe.getUnsafe();
     // Timers for creation of a NodeClass instance
     private static final TimerKey Init_FieldScanning = DebugContext.timer("NodeClass.Init.FieldScanning");
     private static final TimerKey Init_FieldScanningInner = DebugContext.timer("NodeClass.Init.FieldScanning.Inner");
@@ -93,11 +97,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     private static final TimerKey Init_AllowedUsages = DebugContext.timer("NodeClass.Init.AllowedUsages");
     private static final TimerKey Init_IterableIds = DebugContext.timer("NodeClass.Init.IterableIds");
 
-    public static final long MAX_EDGES = 8;
-    public static final long MAX_LIST_EDGES = 6;
-    public static final long OFFSET_MASK = 0xFC;
-    public static final long LIST_MASK = 0x01;
-    public static final long NEXT_EDGE = 0x08;
+    private static final int SHORT_INPUT_LIST_THRESHOLD = 3;
 
     @SuppressWarnings("try")
     private static <T extends Annotation> T getAnnotationTimed(AnnotatedElement e, Class<T> annotationClass, DebugContext debug) {
@@ -109,6 +109,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     /**
      * Gets the {@link NodeClass} associated with a given {@link Class}.
      */
+    @Platforms(Platform.HOSTED_ONLY.class)
     public static <T> NodeClass<T> create(Class<T> c) {
         assert getUnchecked(c) == null;
         Class<? super T> superclass = c.getSuperclass();
@@ -120,6 +121,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     @SuppressWarnings("unchecked")
+    @Platforms(Platform.HOSTED_ONLY.class)
     private static <T> NodeClass<T> getUnchecked(Class<T> clazz) {
         try {
             Field field = clazz.getDeclaredField("TYPE");
@@ -130,6 +132,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
         }
     }
 
+    @Platforms(Platform.HOSTED_ONLY.class)
     public static <T> NodeClass<T> get(Class<T> clazz) {
         NodeClass<T> result = getUnchecked(clazz);
         if (result == null && clazz != NODE_CLASS) {
@@ -155,8 +158,6 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     private final int iterableId;
     private final EnumSet<InputType> allowedUsageTypes;
     private int[] iterableIds;
-    private final long inputsIteration;
-    private final long successorIteration;
 
     private static final CounterKey ITERABLE_NODE_TYPES = DebugContext.counter("IterableNodeTypes");
 
@@ -169,12 +170,14 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
 
     private final int leafId;
 
+    @Platforms(Platform.HOSTED_ONLY.class)
     public NodeClass(Class<T> clazz, NodeClass<? super T> superNodeClass) {
         this(clazz, superNodeClass, new FieldsScanner.DefaultCalcOffset(), null, 0);
     }
 
     @SuppressWarnings("try")
-    public NodeClass(Class<T> clazz, NodeClass<? super T> superNodeClass, FieldsScanner.CalcOffset calcOffset, int[] presetIterableIds, int presetIterableId) {
+    @Platforms(Platform.HOSTED_ONLY.class)
+    private NodeClass(Class<T> clazz, NodeClass<? super T> superNodeClass, FieldsScanner.CalcOffset calcOffset, int[] presetIterableIds, int presetIterableId) {
         super(clazz);
         DebugContext debug = DebugContext.forCurrentThread();
         this.superNodeClass = superNodeClass;
@@ -193,9 +196,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
 
         try (DebugCloseable t1 = Init_Edges.start(debug)) {
             successors = new SuccessorEdges(fs.directSuccessors, fs.successors);
-            successorIteration = computeIterationMask(successors.type(), successors.getDirectCount(), successors.getOffsets());
             inputs = new InputEdges(fs.directInputs, fs.inputs);
-            inputsIteration = computeIterationMask(inputs.type(), inputs.getDirectCount(), inputs.getOffsets());
         }
         try (DebugCloseable t1 = Init_Data.start(debug)) {
             data = Fields.create(fs.data);
@@ -213,6 +214,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
 
         NodeInfo info = getAnnotationTimed(clazz, NodeInfo.class, debug);
         assert info != null : "Missing NodeInfo annotation on " + clazz;
+        shortName = computeShortName(info);
         if (!info.nameTemplate().isEmpty()) {
             this.nameTemplate = info.nameTemplate();
         } else if (!info.shortName().isEmpty()) {
@@ -301,27 +303,6 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
         return size;
     }
 
-    public static long computeIterationMask(Edges.Type type, int directCount, long[] offsets) {
-        long mask = 0;
-        if (offsets.length > NodeClass.MAX_EDGES) {
-            throw new GraalError("Exceeded maximum of %d edges (%s)", NodeClass.MAX_EDGES, type);
-        }
-        if (offsets.length - directCount > NodeClass.MAX_LIST_EDGES) {
-            throw new GraalError("Exceeded maximum of %d list edges (%s)", NodeClass.MAX_LIST_EDGES, type);
-        }
-
-        for (int i = offsets.length - 1; i >= 0; i--) {
-            long offset = offsets[i];
-            assert ((offset & 0xFF) == offset) : "field offset too large!";
-            mask <<= NodeClass.NEXT_EDGE;
-            mask |= offset;
-            if (i >= directCount) {
-                mask |= 0x3;
-            }
-        }
-        return mask;
-    }
-
     private synchronized void addIterableId(int newIterableId) {
         assert !containsId(newIterableId, iterableIds);
         int[] copy = Arrays.copyOf(iterableIds, iterableIds.length + 1);
@@ -347,23 +328,23 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
         return false;
     }
 
-    private String shortName;
+    private final String shortName;
 
     public String shortName() {
-        if (shortName == null) {
-            NodeInfo info = getClazz().getAnnotation(NodeInfo.class);
-            if (!info.shortName().isEmpty()) {
-                shortName = info.shortName();
+        return shortName;
+    }
+
+    private String computeShortName(NodeInfo info) {
+        if (!info.shortName().isEmpty()) {
+            return info.shortName();
+        } else {
+            String localShortName = getClazz().getSimpleName();
+            if (localShortName.endsWith("Node") && !localShortName.equals("StartNode") && !localShortName.equals("EndNode")) {
+                return localShortName.substring(0, localShortName.length() - 4);
             } else {
-                String localShortName = getClazz().getSimpleName();
-                if (localShortName.endsWith("Node") && !localShortName.equals("StartNode") && !localShortName.equals("EndNode")) {
-                    shortName = localShortName.substring(0, localShortName.length() - 4);
-                } else {
-                    shortName = localShortName;
-                }
+                return localShortName;
             }
         }
-        return shortName;
     }
 
     @Override
@@ -415,7 +396,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     /**
      * Describes a field representing an input or successor edge in a node.
      */
-    protected static class EdgeInfo extends FieldsScanner.FieldInfo {
+    public static class EdgeInfo extends FieldsScanner.FieldInfo {
 
         public EdgeInfo(long offset, String name, Class<?> type, Class<?> declaringClass) {
             super(offset, name, type, declaringClass);
@@ -862,6 +843,11 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     static EconomicMap<Node, Node> addGraphDuplicate(final Graph graph, final Graph oldGraph, int estimatedNodeCount, Iterable<? extends Node> nodes, final Graph.DuplicationReplacement replacements) {
+        return addGraphDuplicate(graph, oldGraph, estimatedNodeCount, nodes, replacements, true);
+    }
+
+    static EconomicMap<Node, Node> addGraphDuplicate(final Graph graph, final Graph oldGraph, int estimatedNodeCount, Iterable<? extends Node> nodes, final Graph.DuplicationReplacement replacements,
+                    boolean applyGVN) {
         final EconomicMap<Node, Node> newNodes;
         int denseThreshold = oldGraph.getNodeCount() + oldGraph.getNodesDeletedSinceLastCompression() >> 4;
         if (estimatedNodeCount > denseThreshold) {
@@ -872,7 +858,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
             newNodes = EconomicMap.create(Equivalence.IDENTITY);
         }
         graph.beforeNodeDuplication(oldGraph);
-        createNodeDuplicates(graph, nodes, replacements, newNodes);
+        createNodeDuplicates(graph, nodes, replacements, newNodes, applyGVN);
 
         InplaceUpdateClosure replacementClosure = new InplaceUpdateClosure() {
 
@@ -911,7 +897,8 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
         return newNodes;
     }
 
-    private static void createNodeDuplicates(final Graph graph, Iterable<? extends Node> nodes, final Graph.DuplicationReplacement replacements, final EconomicMap<Node, Node> newNodes) {
+    private static void createNodeDuplicates(final Graph graph, Iterable<? extends Node> nodes, final Graph.DuplicationReplacement replacements, final EconomicMap<Node, Node> newNodes,
+                    boolean applyGVN) {
         for (Node node : nodes) {
             if (node != null) {
                 assert !node.isDeleted() : "trying to duplicate deleted node: " + node;
@@ -923,7 +910,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
                     assert replacement != null;
                     newNodes.put(node, replacement);
                 } else {
-                    Node newNode = node.clone(graph, WithAllEdges);
+                    Node newNode = node.clone(graph, WithAllEdges, applyGVN);
                     assert newNode.getNodeClass().isLeafNode() || newNode.hasNoUsages() : Assertions.errorMessageContext("newNode", newNode);
                     assert newNode.getClass() == node.getClass() : Assertions.errorMessageContext("newNode", newNode, "node", node);
                     newNodes.put(node, newNode);
@@ -1062,7 +1049,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
                     int size = nodeList.size();
                     if (size != 0) {
                         // Set pointer to upper most index of node list.
-                        return ((mask >>> NEXT_EDGE) << 24) | (mask & 0xFD) | ((size - 1) << NEXT_EDGE);
+                        return ((mask >>> NEXT_EDGE) << 24) | (mask & 0xFD) | ((long) (size - 1) << NEXT_EDGE);
                     }
                 }
                 // Node list is empty or null => skip.
@@ -1133,7 +1120,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     public NodeIterable<Node> getSuccessorIterable(final Node node) {
-        long mask = this.successorIteration;
+        long mask = this.successors.getIterationMask();
         return new NodeIterable<>() {
 
             @Override
@@ -1167,7 +1154,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     public NodeIterable<Node> getInputIterable(final Node node) {
-        long mask = this.inputsIteration;
+        long mask = this.inputs.getIterationMask();
         return new NodeIterable<>() {
 
             @Override
@@ -1201,11 +1188,11 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     public boolean equalSuccessors(Node node, Node other) {
-        return equalEdges(node, other, successorIteration);
+        return equalEdges(node, other, successors.getIterationMask());
     }
 
     public boolean equalInputs(Node node, Node other) {
-        return equalEdges(node, other, inputsIteration);
+        return equalEdges(node, other, inputs.getIterationMask());
     }
 
     private boolean equalEdges(Node node, Node other, long mask) {
@@ -1232,7 +1219,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     public void pushInputs(Node node, NodeStack stack) {
-        long myMask = this.inputsIteration;
+        long myMask = this.inputs.getIterationMask();
         while (myMask != 0) {
             long offset = (myMask & OFFSET_MASK);
             if ((myMask & LIST_MASK) == 0) {
@@ -1260,11 +1247,11 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     public void applySuccessors(Node node, EdgeVisitor consumer) {
-        applyEdges(node, consumer, this.successorIteration, successors);
+        applyEdges(node, consumer, this.successors.getIterationMask(), successors);
     }
 
     public void applyInputs(Node node, EdgeVisitor consumer) {
-        applyEdges(node, consumer, this.inputsIteration, inputs);
+        applyEdges(node, consumer, this.inputs.getIterationMask(), inputs);
     }
 
     private static void applyEdges(Node node, EdgeVisitor consumer, long mask, Edges edges) {
@@ -1304,7 +1291,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     public void unregisterAtSuccessorsAsPredecessor(Node node) {
-        long myMask = this.successorIteration;
+        long myMask = this.successors.getIterationMask();
         while (myMask != 0) {
             long offset = (myMask & OFFSET_MASK);
             if ((myMask & LIST_MASK) == 0) {
@@ -1334,13 +1321,13 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     public void registerAtSuccessorsAsPredecessor(Node node) {
-        long myMask = this.successorIteration;
+        long myMask = this.successors.getIterationMask();
         while (myMask != 0) {
             long offset = (myMask & OFFSET_MASK);
             if ((myMask & LIST_MASK) == 0) {
                 Node curNode = Edges.getNodeUnsafe(node, offset);
                 if (curNode != null) {
-                    assert curNode.isAlive() : "Successor not alive";
+                    GraalError.guarantee(curNode.isAlive(), "Adding %s to the graph but its successor %s is not alive", node, curNode);
                     node.updatePredecessor(null, curNode);
                 }
             } else {
@@ -1356,7 +1343,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
             for (int i = 0; i < list.size(); ++i) {
                 Node curNode = list.get(i);
                 if (curNode != null) {
-                    assert curNode.isAlive() : "Successor not alive";
+                    GraalError.guarantee(curNode.isAlive(), "Adding %s to the graph but its successor %s is not alive", node, curNode);
                     node.updatePredecessor(null, curNode);
                 }
             }
@@ -1373,7 +1360,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
      */
     public boolean replaceFirstInput(Node node, Node key, Node replacement) {
         assert node.getNodeClass() == this : Assertions.errorMessageContext("node", node, "this", this);
-        return replaceFirstEdge(node, key, replacement, this.inputsIteration, inputs);
+        return replaceFirstEdge(node, key, replacement, this.inputs.getIterationMask(), inputs);
     }
 
     /**
@@ -1386,7 +1373,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
      */
     public boolean replaceFirstSuccessor(Node node, Node key, Node replacement) {
         assert node.getNodeClass() == this : Assertions.errorMessageContext("node", node, "this", this);
-        return replaceFirstEdge(node, key, replacement, this.successorIteration, successors);
+        return replaceFirstEdge(node, key, replacement, this.successors.getIterationMask(), successors);
     }
 
     private static boolean replaceFirstEdge(Node node, Node key, Node replacement, long mask, Edges edges) {
@@ -1413,13 +1400,14 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     void registerAtInputsAsUsage(Node node) {
-        long myMask = this.inputsIteration;
+        // GraalError.guarantee(this.inputsIteration != null, this.getClazz().getName());
+        long myMask = this.inputs.getIterationMask();
         while (myMask != 0) {
             long offset = (myMask & OFFSET_MASK);
             if ((myMask & LIST_MASK) == 0) {
                 Node curNode = Edges.getNodeUnsafe(node, offset);
                 if (curNode != null) {
-                    assert curNode.isAlive() : "Input " + curNode + " of node " + node + " is not alive";
+                    GraalError.guarantee(curNode.isAlive(), "Adding %s to the graph but its input %s is not alive", node, curNode);
                     curNode.addUsage(node);
                 }
             } else {
@@ -1435,7 +1423,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
             for (int i = 0; i < list.size(); ++i) {
                 Node curNode = list.get(i);
                 if (curNode != null) {
-                    assert curNode.isAlive() : "Input not alive " + curNode;
+                    GraalError.guarantee(curNode.isAlive(), "Adding %s to the graph but its input %s is not alive", node, curNode);
                     curNode.addUsage(node);
                 }
             }
@@ -1443,7 +1431,7 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     }
 
     public void unregisterAtInputsAsUsage(Node node) {
-        long myMask = this.inputsIteration;
+        long myMask = this.inputs.getIterationMask();
         while (myMask != 0) {
             long offset = (myMask & OFFSET_MASK);
             if ((myMask & LIST_MASK) == 0) {
@@ -1465,6 +1453,11 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
     private static void unregisterAtInputsAsUsageHelper(Node node, long offset) {
         NodeList<Node> list = Edges.getNodeListUnsafe(node, offset);
         if (list != null) {
+            if (list.size() > SHORT_INPUT_LIST_THRESHOLD) {
+                // Fast path for longer input lists
+                unregisterAtInputsAsUsageHelperMany(node, list);
+                return;
+            }
             for (int i = 0; i < list.size(); ++i) {
                 Node curNode = list.get(i);
                 if (curNode != null) {
@@ -1476,5 +1469,78 @@ public final class NodeClass<T> extends FieldIntrospection<T> {
             }
             list.clearWithoutUpdate();
         }
+    }
+
+    /**
+     * Optimized version of {@link #unregisterAtInputsAsUsageHelper} that is faster for nodes that
+     * have many input edges leading to the same value node.
+     * <p>
+     * Removes batches of the same input value at once, in order to reduce repeated traversals of
+     * potentially long usage lists. This allows faster clearing of nodes with many input edges to
+     * the same value, i.e., the usage list of one input node may include the same usage many times,
+     * and removing each occurrence of this usage one by one can be slow if the input value has many
+     * usages in the graph (as is commonly the case with constant nodes, like null).
+     * <p>
+     * For example, considering a node with 6 inputs like this:
+     *
+     * <pre>
+     *                         |Other|
+     * C(null) C(null) C(null)    |    C(null) C(null)
+     *     \      |       |       |       |      /
+     *   +-----------------------------------------+
+     *   |   usage node (e.g. VirtualObjectState)  |
+     *   +-----------------------------------------+
+     * </pre>
+     *
+     * We can batch-remove this node from its inputs' usages as follows, depending on
+     * maxOtherEdgesToLookPast (i.e. the maximum number of other input edges to look past):
+     * <ul>
+     * <li>If maxOtherEdgesToLookPast = 0, we consider only consecutive occurrences of the same
+     * input node (here: 3 * null + 1 * other + 2 * null).
+     * <li>If maxOtherEdgesToLookPast = 1, we look past one other input to find more occurrences of
+     * the same input node to be removed at once (here: 5 * null + 1 * other). Note that we need to
+     * null out any input slots that would otherwise be processed again.
+     * </ul>
+     */
+    private static void unregisterAtInputsAsUsageHelperMany(Node node, NodeList<Node> list) {
+        final int maxOtherEdgesToLookPast = 1;
+        int size = list.size();
+        int i = 0; // Avoid checkstyle warning: Control variable 'i' is modified.
+        for (; i < size; i++) {
+            Node curNode = list.get(i);
+            if (curNode != null) {
+                // Find more occurrences of the same input node to remove at once.
+                int sameInputEdges = 1;
+                int otherInputEdges = 0;
+                for (int j = i + 1; j < size && otherInputEdges <= maxOtherEdgesToLookPast; j++) {
+                    Node nextNode = list.get(j);
+                    if (nextNode != null) {
+                        if (nextNode == curNode) {
+                            sameInputEdges++;
+                            if (otherInputEdges != 0) {
+                                // Clear NodeList slot without update.
+                                list.initialize(j, null);
+                            }
+                        } else {
+                            otherInputEdges++;
+                        }
+                    }
+                    if (otherInputEdges == 0) {
+                        /*
+                         * As long as we've only seen the same input node or null, there's no need
+                         * to backtrack from here, so we can advance the outer loop accordingly.
+                         * Otherwise, we'll need to continue from first unprocessed "other" edge
+                         * (already processed edges will have been set to null, and be ignored).
+                         */
+                        i = j;
+                    }
+                }
+                curNode.removeUsageNTimes(node, sameInputEdges);
+                if (curNode.hasNoUsages()) {
+                    node.maybeNotifyZeroUsages(curNode);
+                }
+            }
+        }
+        list.clearWithoutUpdate();
     }
 }
